<resources>
    <string name="detail_name">Name</string>
    <string name="detail_tags">Tags</string>
    <string name="detail_country">Country</string>
    <string name="detail_create_shortcut">Add to home screen</string>
    <string name="detail_language">Language</string>
    <string name="detail_weblink">Weblink</string>
    <string name="detail_visit_website">@string/action_station_visit_website</string>
    <string name="detail_play">Play</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_stop">Stop</string>
    <string name="detail_share">Share</string>
    <string name="detail_play_in_radiodroid">Play in RadioDroid</string>
    <string name="action_links">Links</string>
    <string name="action_homepage">Homepage</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_alarm">Alarm</string>
    <string name="action_station_visit_website">Visit Website</string>
    <string name="action_station_copy_stream_url">Copy Stream URL</string>
    <string name="action_station_share">Share</string>
    <string name="action_local">Local</string>
    <string name="action_skip_to_next">Next</string>
    <string name="action_pause">Pause</string>
    <string name="action_skip_to_previous">Previous</string>
    <string name="action_resume">Resume</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_history">Delete history</string>
    <string name="action_delete_favorites">Delete favorites</string>
    <string name="action_delete_stream_history">Clear track history</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_top_click">Top Click</string>
    <string name="action_toggle_view">Toggle view</string>
    <string name="action_top_vote">Top Vote</string>
    <string name="action_changed_lately">Changed Lately</string>
    <string name="action_currently_playing">Currently Playing</string>
    <string name="action_tags">Tags</string>
    <string name="action_countries">Countries/Regions</string>
    <string name="action_languages">Languages</string>
    <string name="action_edit">Edit</string>
    <string name="action_lyrics">Lyrics</string>
    <string name="action_copy_info">Copy Info</string>
    <string name="error_station_load">Could not connect to station</string>
    <string name="error_list_update">Could not connect to radio browser server</string>
    <string name="share_action">Share station link with..</string>
    <string name="nav_item_stations">Stations</string>
    <string name="nav_item_starred">Favorites</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_multi_search">Multi Criteria Search</string>
    <string name="nav_item_alarm">Alarm</string>
    <string name="about_text">This app uses the free radio station directory at\nhttps://www.radio-browser.info\nEveryone can add stations to it. It works like a wiki for online (streaming) radio stations.\n\nContact:\nsegler_alex@web.de\n\nBugtracker:\nhttps://github.com/segler-alex/RadioDroid/issues\n\nIf you like the software and want to help, feel free to send me an email. I really need someone with graphical experience to make the app nicer to the eye :) Maybe someone who can draw icons, images...but also programmers who fix bugs, or implement new ones (features not bugs ;)\nAlso ideas for new features are always appreciated!\n\nThis app is free software licensed under the GPLv3.\nhttps://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_version">Version: %1$s</string>
    <string name="detail_star">Add to favorites</string>
    <string name="detail_unstar">Delete from favorites</string>
    <string name="detail_play_in_external_player">@string/action_play_in_external</string>
    <string name="progress_loading">Loading...</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_track">Unknown Track</string>
    <string name="unknown_station">Unknown Station</string>
    <string name="unknown">Unknown</string>
    <string name="now_playing_accessibility">Now playing: %1$s by %2$s</string>
    <string name="now_playing_artist_unknown">Now playing: %s, artist unknown</string>
    <string name="now_playing_track_unknown">Now playing song by %s, track name unknown</string>
    <string name="now_playing_all_unknown">Now playing music, artist and track unknown</string>
    <string name="now_playing_stream">Now playing: %s</string>
    <string name="sleep_timer" formatted="true">Sleep timer: %1$02d:%2$02d</string>
    <string name="sleep_timer_title">Stop playing after the selected minute</string>
    <string name="sleep_timer_apply">Apply</string>
    <string name="sleep_timer_clear">Clear</string>
    <string name="nav_item_add_sleep">Sleep timer</string>
    <string name="action_random_play">Random play</string>
    <string name="nav_item_save_playlist">Export favorites as playlist</string>
    <string name="nav_item_load_playlist">Import favorites from playlist</string>
    <string name="nav_item_save_history_playlist">Export history as playlist</string>
    <string name="confirm_overwrite_file">Overwrite the file?</string>
    <string name="dialog_hint_file_name">Enter file name</string>
    <string name="error_empty_field">This field is required</string>
    <string name="error_invalid_file_name">Invalid file name</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_overwrite">Overwrite</string>
    <string name="notify_load_playlist_nok">Could not import from %1$s&#47;%2$s</string>
    <string name="notify_load_playlist_now">Importing from %1$s&#47;%2$s, please wait.</string>
    <string name="notify_load_playlist_ok">Imported %1$d stations from %2$s&#47;%3$s</string>
    <string name="notify_save_playlist_nok">Could not export to %1$s&#47;%2$s</string>
    <string name="notify_save_playlist_now">Exporting to %1$s&#47;%2$s, please wait.</string>
    <string name="notify_save_playlist_ok">Exported to %1$s&#47;%2$s successfully</string>
    <string name="notify_sync_list_deleted_entries">%1$d of %2$d local stations in the list marked non-existent on the server</string>
    <string name="searchpreference_clear_history">Clear history</string>
    <string name="searchpreference_no_results">No results</string>
    <string name="searchpreference_search">Search…</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_local_database_update">Local Database Update</string>
    <string name="settings_update_local_database">Update Local Database</string>
    <string name="settings_update_local_database_desc">Download all radio stations from network and store them locally</string>
    <string name="settings_check_network_connection">Check Network Connection</string>
    <string name="settings_check_network_connection_desc">Test connection to radio browser server</string>
    <string name="settings_local_database_status">Local Database Status</string>
    <string name="settings_local_database_status_default">Not updated yet</string>
    <string name="settings_local_database_status_success">Last update: %1$s\nStation count: %2$d</string>
    <string name="settings_local_database_status_failed">Update failed: %s</string>
    <string name="settings_language">Interface Language</string>
    <string name="settings_language_desc">Select language for app interface</string>
    <string name="language_system">System Default</string>
    <string name="language_english">English</string>
    <string name="language_chinese">Chinese</string>
    <string name="multi_search_title">Multi Criteria Search</string>
    <string name="multi_search_country">Country</string>
    <string name="multi_search_language">Language</string>
    <string name="multi_search_tag">Tag</string>
    <string name="multi_search_keyword">Keyword</string>
    <string name="multi_search_hint">Enter keyword to search</string>
    <string name="multi_search_all">All</string>
    <string name="multi_search_reset">Reset Filters</string>
    <string name="multi_search_no_results">No stations found matching the criteria</string>
    <string name="multi_search_expand_filters">Expand Filters</string>
    <string name="multi_search_collapse_filters">Collapse Filters</string>
    <string name="network_check_title">Network Connection Check</string>
    <string name="network_check_saved_results">Saved test results available (%1$s).\n\nDo you want to view saved results or perform a new test?</string>
    <string name="network_check_view_saved">View Saved Results</string>
    <string name="network_check_new_test">Perform New Test</string>
    <string name="network_check_cancel">Cancel</string>
    <string name="network_check_testing">Checking network connection speed...</string>
    <string name="network_check_failed">Network Check Failed</string>
    <string name="network_check_error">Unable to connect to radio browser server: %1$s</string>
    <string name="network_check_results_title">Network Connection Speed Test Results</string>
    <string name="network_check_time">Test Time: %1$s</string>
    <string name="network_check_server_1">Server 1: fi1.api.radio-browser.info</string>
    <string name="network_check_server_2">Server 2: de2.api.radio-browser.info</string>
    <string name="network_check_http">HTTP: %1$s</string>
    <string name="network_check_https">HTTPS: %1$s</string>
    <string name="network_check_connection_failed">Connection Failed</string>
    <string name="network_check_fastest">Fastest Connection:</string>
    <string name="network_check_no_connection">No Connection</string>
    <string name="network_check_no_available">No Available Connection</string>
    <string name="network_check_ok">OK</string>
    <string name="export_database_title">Export Main Database</string>
    <string name="export_database_message">Export main database to external storage? The exported file will be saved in the Download folder.</string>
    <string name="export_database_button">Export</string>
    <string name="import_database_title">Import Main Database</string>
    <string name="import_database_message">Import main database from external storage?

Note: The app will automatically restart after import to load the new database.

This will overwrite the current main database, please ensure you have backed up important data.</string>
    <string name="import_database_button">Select File</string>
    <string name="export_database_summary">Export main database to external storage, backup radio station data</string>
    <string name="import_database_summary">Import main database from external storage, quickly restore radio station data</string>
    <string name="database_not_updated">Database Not Updated Yet</string>
    <string name="last_update">Last Update: %1$s, Station Count: %2$d</string>
    <string name="get_status_failed">Failed to Get Status: %1$s</string>
    <string name="save_file_failed">Failed to Save File: %1$s</string>
    <string name="import_failed_invalid_format">Please select an M3U format playlist file</string>
    <string name="import_failed_parse">Import Failed: Unable to Parse File</string>
    <string name="database_status_updated">Database Status Updated: %1$s</string>
    <string name="database_status_update_failed">Database Status Update Failed: %1$s</string>
    <string name="database_status_from_fields">Database Status Updated from Database Fields: %1$s</string>
    <string name="empty_database_message">Local database is empty, please update the local database in settings first</string>
    <string name="no_results_message">No %s categories found, database update may be incomplete, please try updating the local database in settings</string>
</resources>